<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop= "60dp"
        android:text = "Delete Reviews"
        android:textSize = "40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop= "20dp"
        android:text = "Select a review you would like to delete."
        android:textSize = "20dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_below= "@+id/title"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below= "@+id/desc"
        android:layout_marginLeft="32dp"
        />

    <Button
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:id="@+id/delete_button"
        android:layout_centerHorizontal="true"
        android:layout_below= "@+id/spinner"
        android:layout_marginTop="20dp"
        android:text = "Delete review"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint="#0ED6B9"
        />

    <TextView
        android:id="@+id/review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop= "20dp"
        android:textSize = "30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_below="@id/delete_button"
        android:text = "Your reviews"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/review_title"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"/>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint="#0ED6B9"
        android:onClick="onClickBack" />


</RelativeLayout>