<resources>
    <string name="app_name">SoCalBeach4LifeReal</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_map_beaches">DisplayBeachesActivity</string>
    <string name="login_failed_toast_text">Failed to login, please check your credentials.</string>
    <string name="register_successful_toast">Registered successfully!</string>
    <string name="register_failure_toast">Failed to register.</string>
    <string name="forgot_password_successful_toast">Check your email to reset your password</string>
    <string name="data_updated_successful_toast">Data has been updated</string>
</resources>